# sonda-validation

./: .gitignore  DIRECTORY_STRUCTURE.md  README.md  fill_climatology.py  main.py  pyproject.toml  requirements.txt  transform_climatology.py  validation.ipynb
core/: sondaUtils.py  sondaValidator.py
data/: sonda_climatology.csv
data/DQC/: compare_dqc.py  export_divergences.py  report.md
data/DQC/metadata/: INPESONDA_normais.csv  INPESONDA_stations.csv
data/metadata/: INPESONDA_normais.csv  INPESONDA_normais_climatology.csv
tests/: conftest.py  test_meteo_validator.py  test_solar_validator.py
