[project]
name = "sonda-validation"
version = "0.1.0"
description = "INPE SONDA data validation system for solarimetric and meteorological data quality control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "numpy>=1.24.0",
    "astral>=3.0.0",
    "timezonefinder>=6.0.0",
    "pyarrow>=12.0.0",
    "pytest>=8.4.2",
    "duck>=0.1",
    "db>=0.1.1",
]

[project.scripts]
sonda-validation = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
